Cleanup in the precip parsing notebook.

--- a/pandas/load_precip_data.ipynb
+++ b/pandas/load_precip_data.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:9e7708745eaa720ab6063769b7726a6ec6010a9811a12de922040e3419195905"
+  "signature": "sha256:5bc2500076af019f3aaff937df2bad0529900a9b7f7cee88a2dd2133d14c88ee"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -35,6 +35,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "# constants\n",
       "REGION = 'region'\n",
       "SUBREGION = 'subregion'\n",
       "DATAROW = 'datarow'"
@@ -45,31 +46,18 @@
      "prompt_number": 53
     },
     {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "h = lxml.html.parse('http://cdec.water.ca.gov/cgi-progs/reports/PRECIPOUT.2011')"
-     ],
-     "language": "python",
+     "cell_type": "markdown",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 2
+     "source": [
+      "Get some example rows for testing functions later."
+     ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "table = h.xpath('//*[@id=\"main_content\"]/div/div[1]/table')[0]"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 41
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
+      "h = lxml.html.parse('http://cdec.water.ca.gov/cgi-progs/reports/PRECIPOUT.2011')\n",
+      "table = h.xpath('//*[@id=\"main_content\"]/div/div[1]/table')[0]\n",
       "rows = table.getchildren()\n",
       "region_row = rows[0]\n",
       "subregion_row = rows[2]\n",
@@ -78,7 +66,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 55
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -98,9 +86,9 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "def row_type(r):\n",
+      "def row_type(row):\n",
       "    \"\"\"Categorize a row.\"\"\"\n",
-      "    cells = r.iterchildren()\n",
+      "    cells = row.iterchildren()\n",
       "    \n",
       "    if next(cells).tag == 'th':\n",
       "        # first cell is a <th> element\n",
@@ -124,9 +112,9 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "def get_region(r):\n",
-      "    \"\"\"Get region name from a row.\"\"\"\n",
-      "    return r.text_content().strip()\n",
+      "def get_region(row):\n",
+      "    \"\"\"Get region name from a REGION row.\"\"\"\n",
+      "    return row.text_content().strip()\n",
       "\n",
       "assert get_region(region_row) == 'NORTH COAST'"
      ],
@@ -139,9 +127,9 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "def get_subregion(r):\n",
-      "    \"\"\"Parse subregion and month names from row.\"\"\"\n",
-      "    cell_text = [c.text_content().strip() for c in r]\n",
+      "def get_subregion(row):\n",
+      "    \"\"\"Parse subregion and month names from SUBREGION row.\"\"\"\n",
+      "    cell_text = [cell.text_content().strip() for cell in row]\n",
       "    return cell_text[0], cell_text[3:]\n",
       "\n",
       "assert get_subregion(subregion_row)[0] == 'SMITH RIVER'\n",
@@ -157,9 +145,9 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "def get_elev_abbrev(c):\n",
+      "def get_elev_abbrev(cell):\n",
       "    \"\"\"Parse elevation and station abbreviation.\"\"\"\n",
-      "    tc = c.text_content().strip()\n",
+      "    tc = cell.text_content().strip()\n",
       "    return int(tc[:-6]), tc[-4:-1]\n",
       "\n",
       "assert get_elev_abbrev(station_row.getchildren()[1]) == (384, 'GAS')"
@@ -173,9 +161,9 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "def get_precip_data(c):\n",
+      "def get_precip_data(cell):\n",
       "    \"\"\"Parse a precip data cell.\"\"\"\n",
-      "    tc = [s.strip() for s in c.itertext()]\n",
+      "    tc = [s.strip() for s in cell.itertext()]\n",
       "    for i, t in enumerate(tc):\n",
       "        if t in {'---', ''}:\n",
       "            tc[i] = float('nan')\n",
