all_month and all_year is not defined
This change should fix it by referring directly to precip_data

--- a/advanced_matplotlib.ipynb
+++ b/advanced_matplotlib.ipynb
@@ -94,7 +94,7 @@
      "input": [
       "#Convert all dates to fractional year\n",
       "date = []\n",
-      "for month, year in zip(all_month, all_year):\n",
+      "for month, year in zip(precip_data.month, precip_data.year):\n",
       "    date.append(convert_date_to_fractional_year(month, year))\n",
       "\n",
       "precip_data['date'] = date"
