--- a/pandas/pandas_intro.ipynb
+++ b/pandas/pandas_intro.ipynb
@@ -34,7 +34,7 @@
    "source": [
     "## Loading data\n",
     "\n",
-    "First and foremost, pandas gives us a really convenient way to read in data in CSV (\"comma separated value\") format. In this lesson, we have two CSV files containing information about precipitation in California. The first file we'll take a look at is `precip_monthly.csv`, which contains monthly aggregate data:"
+    "First and foremost, pandas gives us a really convenient way to read in data in CSV (\"comma separated value\") format. In this lesson, we have two CSV files containing information about precipitation in California. The first file we'll take a look at is `precip_data.csv`, which contains monthly aggregate data:"
    ]
   },
   {
@@ -45,7 +45,7 @@
    },
    "outputs": [],
    "source": [
-    "!head precip_monthly.csv"
+    "!head precip_data.csv"
    ]
   },
   {
@@ -63,7 +63,7 @@
    },
    "outputs": [],
    "source": [
-    "monthly = pd.read_csv(\"precip_monthly.csv\")\n",
+    "monthly = pd.read_csv(\"precip_data.csv\")\n",
     "monthly"
    ]
   },
@@ -216,18 +216,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 1\n",
-    "\n",
-    "Load the monthly data again from the CSV file and extract only the data from the month of July.\n",
-    "\n",
-    "**Hint:** Take a look at `monthly.head()` and `monthly.columns` to see what data is available to you.  \n",
-    "**Hint:** Use `.set_index()` to set a certain column as the DataFrame index."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Saving data"
    ]
   },
@@ -373,68 +361,6 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The `.apply()` function of the groupby object is incredibly powerful, and allows us to perform even more complex computations. We can use the `.apply()` function to perform *any* computation we can write a function for! For example, if we wanted to compute the mean and standard deviation of the precipitation in one go:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "def stats(data):\n",
-    "    return pd.Series(\n",
-    "        [data.mean(), data.std()],     # compute the mean and standard deviation of one particular group\n",
-    "        index=['mean', 'stddev'],      # label the computed statistics\n",
-    "        name=data.name                 # give a name to the result, so pandas knows how to put everything\n",
-    "                                       # back together\n",
-    "    )\n",
-    "\n",
-    "gb['precip'].apply(stats)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "If we want to make these statistics (`mean` and `stddev`) correspond to columns, rather than an additional level in the index, we can use the `.unstack()` method:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "gb['precip'].apply(stats).unstack()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Exercise 2\n",
-    "\n",
-    "Use the `.groupby()` method to compute the average yearly precipitation for each region, and modify the resulting DataFrame so that the rows correspond to regions, and the columns correspond to years. Store the result in a variable called `region_yearly_precip`."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
@@ -449,7 +375,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -495,13 +422,171 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## Plotting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 3\n",
+    "Let's start with plot of the mean California rainfall over the years. The first step will be to use groupby ot aggregate the data by year:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "yearly = monthly.groupby('year').precip.mean()\n",
+    "yearly.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "That gives us a Series, which has a .plot method for plotting the index of the Series vs. the values:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "yearly.plot()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Or we can compare regions and make a bar chart:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "regional = monthly.groupby('region').precip.mean()\n",
+    "regional"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "regional.plot(kind='bar')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is a lot easier to read if it's sorted:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "regional.sort(inplace=False).plot(kind='bar')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
-    "Use any of the above filtering methods to filter the `monthly` data to only those rows from the `'COLORADO RIVER'` subregion.\n",
-    "\n",
-    "(**Bonus:** Can you further filter the data so it's only for the years 1999 - 2003?)"
+    "(Check this map if you're curous where these different regions are: http://www.oocities.org/watergeographer/hydromap.gif.)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If you have a DataFrame of data with the same kind of data in each column you can use the .plot method to create plots with different lines (or other styles) for each column. But first we need to make a DataFrame with data laid out in that way. Let's compare average rainfall in each region over time, which requires grouping on year and region then calculating the mean:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "regional_yearly = monthly.groupby(['year', 'region']).precip.mean()\n",
+    "regional_yearly.head(15)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "regional_yearly is a Series with a two-level index (a MultiIndex), one for year and one for region. What we're after is a DataFrame with regions as columns and precip values for each region/year in the table. The Series .unstack() method can be used to pivot index labels into column labels:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "regional_yearly = regional_yearly.unstack(level='region')\n",
+    "regional_yearly.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we can use .plot to get a different line on the plot for every region (column):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "regional_yearly.plot(kind='line', figsize=(10, 8), colormap='Set3', linewidth=4)"
    ]
   },
   {
